--- a/styles/player.css
+++ b/styles/player.css
@@ -1,6 +1,124 @@
 .player {
 
-    background-color: blue;
     position: absolute;
+    background-color: transparent;
+    background-repeat: no-repeat;
+    animation-fill-mode: forwards;
+
+}
+
+.player.alice {
+
+    background-image: url("../images/player.png");
+
+}
+
+.player.walking {
+
+    animation: none .8s steps(3) infinite;
+
+}
+
+.player.walking.down {
+
+    animation-name: walkdown;
+
+}
+
+.player.walking.left {
+
+    animation-name: walkleft;
+
+}
+
+.player.walking.right {
+
+    animation-name: walkright;
+
+}
+
+.player.walking.up {
+
+    animation-name: walkup;
+
+}
+
+.player.walking.left.up {
+
+    animation-name: walkleftup;
+
+}
+
+.player.walking.left.down {
+
+    animation-name: walkleftdown;
+
+}
+
+.player.walking.right.up {
+
+    animation-name: walkrightup;
+
+}
+
+.player.walking.right.down {
+
+    animation-name: walkrightdown;
+
+}
+@keyframes walkdown {
+
+    from { background-position-x:   0px; }
+      to { background-position-x: -96px; }
+
+}
+
+@keyframes walkleft {
+
+    from { background-position:   0px -32px; }
+      to { background-position: -96px -32px; }
+
+}
+
+@keyframes walkup {
+
+    from { background-position:   0px -96px; }
+      to { background-position: -96px  -96px; }
+   
+
+}
+
+@keyframes walkright {
+
+    from { background-position:   0px -64px; }
+      to { background-position: -96px -64px; }
+
+}
+
+@keyframes walkleftup {
+
+   from { background-position: -96px  -32px; }
+     to { background-position: -192px -32px; }
+
+}
+
+@keyframes walkleftdown {
+
+   from { background-position: -96px  0px; }
+     to { background-position: -192px 0px; }
+
+}
+
+@keyframes walkrightup {
+
+   from { background-position:  -96px -96px; }
+     to { background-position: -192px -96px; }
+
+}
+
+@keyframes walkrightdown {
+
+   from { background-position:   -96px -64px; }
+      to { background-position: -192px -64px; }
 
 }
