--- a/styles/classes/game/entities/swords/ExCalibur.css
+++ b/styles/classes/game/entities/swords/ExCalibur.css
@@ -32,25 +32,25 @@
    
 }
 
-.player[direction=leftup] .excalibur {
+.player[direction=upleft] .excalibur {
     
     -webkit-transform: translate(-17px, -12px) rotate(135deg);
    
 }
 
-.player[direction=leftdown] .excalibur {
+.player[direction=downleft] .excalibur {
     
     -webkit-transform: translate(-15px, 15px) rotate(45deg);
    
 }
 
-.player[direction=rightup] .excalibur {
+.player[direction=upright] .excalibur {
     
     -webkit-transform: translate(25px, -12px) rotate(225deg);
    
 }
 
-.player[direction=rightdown] .excalibur {
+.player[direction=downright] .excalibur {
     
     -webkit-transform: translate(20px, 15px) rotate(315deg);
    
